// Copyright 2022 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// This package defines the Eliza service, which is a port of the DOCTOR script
// for Joseph Weizenbaum's original ELIZA program. Created in the mid-1960s at
// the MIT Artificial Intelligence Laboratory, ELIZA demonstrates the
// superficiality of human-computer communication. DOCTOR simulates a
// psychotherapist, and is commonly found as an Easter egg in emacs
// distributions.
package buf.connect.demo.eliza.v1;

// ElizaService provides a way to talk to ELIZA.
service ElizaService {
  rpc Say(SayRequest) returns (SayResponse) {}
  rpc Converse(stream ConverseRequest) returns (stream ConverseResponse) {}
}

// SayRequest describes the sentence said to ELIZA.
message SayRequest {
  string sentence = 1;
}

// SayResponse describes the sentence responded by ELIZA.
message SayResponse {
  string sentence = 1;
}

// ConverseRequest describes the sentence said to ELIZA.
message ConverseRequest {
  string sentence = 1;
}

// ConverseResponse describes the sentence responded by ELIZA.
message ConverseResponse {
  string sentence = 1;
}
